Fix logo wrapping

--- a/src/components/Nav.module.scss
+++ b/src/components/Nav.module.scss
@@ -21,6 +21,7 @@
     }
 
     &.logo {
+      min-width: 160px;
       flex-grow: 1;
       text-align: left;
       font-size: 25px;
